fixing z-index of modal

--- a/client/src/components/HomePage/modal/LoginModel/style.css
+++ b/client/src/components/HomePage/modal/LoginModel/style.css
@@ -1,6 +1,6 @@
-
 .modal {
   position: absolute;
+  z-index: 99;
   top: 40%;
   left: 50%;
   width: 350px;
@@ -11,6 +11,7 @@
   padding: 5px 0px;
   animation: fadeInOpacity 0.4s 1;
   text-align: center;
+  background-color: white;
 }
 
 .modelContent {
